--- a/SistemaBancario/nbproject/project.properties
+++ b/SistemaBancario/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SistemaBancario
-main.class=
+main.class=src.Banco
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
